# techx_R2_automate

./: .gitignore  README.md
arm1.0 (3)/arm1.0/: arm1.0.ioc
arm1.0 (3)/arm1.0/Core/Inc/: stm32f4xx_it.h
arm1.0 (3)/arm1.0/Core/Src/: can.c  dma.c  gpio.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usart.c
arm1.0 (3)/arm1.0/DMmotor/: DMmotor.c  DMmotor.h
arm1.0 (3)/arm1.0/MDK-ARM/: arm1.0.uvprojx
arm1.0 (3)/arm1.0/MDK-ARM/RTE/_arm1.0/: RTE_Components.h
arm1.0 (3)/arm1.0/bsp_can/: bsp_can.c  bsp_can.h
arm1.0 (3)/arm1.0/protocol/: protocol.c  protocol.h
arm1.0 (3)/arm1.0/sbus/: sbus.c  sbus.h
protocol7/: protocol.c  protocol.h
src/my_arm_automation/: CMakeLists.txt  package.xml
src/my_arm_automation/config/: test_dual_arm_basic.xml  test_gym_master_updated.xml
src/my_arm_automation/include/my_arm_automation/: arm_cartesian_and_wait_node.hpp  arm_trajectory_and_wait_node.hpp  control_gripper_node.hpp  force_failure_node.hpp  force_success_node.hpp  move_arm_node.hpp  play_audio_node.hpp  sleep_node.hpp  switch_chassis_node.hpp  wait_for_signal_node.hpp  wait_forever_node.hpp  wait_gripper_status_node.hpp
src/my_arm_automation/launch/: bt_automation.launch.py
src/my_arm_automation/scripts/: mock_simulator.py
src/my_arm_automation/src/: arm_cartesian_and_wait_node.cpp  arm_trajectory_and_wait_node.cpp  control_gripper_node.cpp  force_failure_node.cpp  force_success_node.cpp  main_tree_executor.cpp  move_arm_node.cpp  play_audio_node.cpp  sleep_node.cpp  switch_chassis_node.cpp  wait_for_signal_node.cpp  wait_forever_node.cpp  wait_gripper_status_node.cpp
src/my_arm_description/: CMakeLists.txt  package.xml
src/my_arm_description/config/: display1.rviz
src/my_arm_description/launch/: display.launch.py
src/my_arm_description/meshes/: base_link.STL  big_arm_link.STL  small_arm_link.STL  small_arm_revolute.STL
src/my_arm_description/urdf/: real_arm.urdf.xacro
src/my_arm_hardware/: CMakeLists.txt  arm_hardware_plugin.xml  package.xml
src/my_arm_hardware/include/my_arm_hardware/: arm_hardware_interface.hpp
src/my_arm_hardware/src/: arm_hardware_interface.cpp
src/real_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/real_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  real_arm.srdf  real_arm.urdf.xacro  ros2_controllers.yaml
src/real_arm_moveit_config/launch/: demo.launch.py  demo_gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  real_arm.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
